# harmonics

./: .gitignore  AUDIO.ipynb  CHANGELOG.md  CONTRIBUTING.md  DEPRECATED_SCRIPTS.md  DOCS.md  EXTRACT.ipynb  INTERVALS.ipynb  MANIFEST.in  MODERNIZATION_SUMMARY.md  README.md  TENSORFLOW_DATA.ipynb  TODO.md  Untitled1.ipynb  cc.csv  chords.csv  config.yaml  convertcsv.csv  drum_extract.py  generate_sequence.py  gm1.py  harmonics.code-workspace  harmonics.py  maybe.csv  maybe.txt  midi.py  pyproject.toml  r.txt  s.txt  scales.csv  script.txt  setup.py  t.txt  tokenizer.ipynb  tokens.pt  trainer.py
.github/: copilot-instructions.md
.ipynb_checkpoints/: INTERVALS-checkpoint.ipynb
archive/: jazz.csv
counterpy/: .cantus.py.swp  cantus.py
data/: af.csv  coolbit.txt  gq.csv  popsongs_index.csv  rz.csv  test.mid
dev/: ANALYZE.ipynb  BOSTON.ipynb  BOT.ipynb  EXTRACT.ipynb  INTERVALS.ipynb  TENSORFLOW_DATA.ipynb  Untitled.ipynb
harmonics/: audio.py  harmonics.py
logs/: events.out.tfevents.1718045734.karjala  events.out.tfevents.1718045965.karjala  events.out.tfevents.1718046124.karjala  events.out.tfevents.1718046233.karjala  events.out.tfevents.1718046268.karjala  events.out.tfevents.1718046337.karjala  events.out.tfevents.1718046398.karjala  events.out.tfevents.1718046407.karjala  events.out.tfevents.1718046562.karjala  events.out.tfevents.1718047249.karjala  events.out.tfevents.1718047466.karjala  events.out.tfevents.1718047530.karjala  events.out.tfevents.1718047533.karjala  events.out.tfevents.1718047534.karjala  events.out.tfevents.1718047535.karjala  events.out.tfevents.1718047537.karjala  events.out.tfevents.1718047538.karjala  events.out.tfevents.1718047539.karjala  events.out.tfevents.1718047541.karjala  events.out.tfevents.1718047543.karjala  events.out.tfevents.1718047546.karjala  events.out.tfevents.1718047547.karjala  events.out.tfevents.1718047549.karjala  events.out.tfevents.1718047551.karjala  events.out.tfevents.1718047553.karjala  events.out.tfevents.1718047555.karjala  events.out.tfevents.1718047557.karjala  events.out.tfevents.1718047559.karjala  events.out.tfevents.1718047560.karjala  events.out.tfevents.1718047562.karjala  events.out.tfevents.1718047563.karjala  events.out.tfevents.1718047600.karjala  events.out.tfevents.1718047604.karjala  events.out.tfevents.1718047605.karjala  events.out.tfevents.1718047606.karjala  events.out.tfevents.1718047608.karjala  events.out.tfevents.1718047609.karjala  events.out.tfevents.1718047611.karjala  events.out.tfevents.1718047612.karjala  events.out.tfevents.1718047614.karjala  (+23 more)
midi/: ArtPepper_InAMellowTone_Solo_bass.mid  BennyCarter_LongAgoAndFarAway-1_Solo_bass.mid  BennyCarter_SweetLorraine_Solo_bass.mid  BennyGoodman_Avalon_Solo_bass.mid  BobBerg_IDidn'tKnowWhatTimeItWas_Solo_bass.mid  BobBerg_NoMoe_Solo_bass.mid  BuckClayton_AfterTheatreJump_Solo_bass.mid  BuckClayton_Dickie'sDream_Solo_bass.mid  CannonballAdderley_HighFly_Solo_bass.mid  (+13 more)
(+5600 files in other folders)
